Correct spacing on Actions page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,10 +70,6 @@ a {
     list-style: none;
 }
 
-.bottom-space {
-    padding-bottom: 2rem;
-}
-
 .button-link {
     font-family: "Delius Swash Caps", cursive;
     text-transform: uppercase;
